@@ -5,8 +5,9 @@
 
 [Foojay.io](https://foojay.io/command-line-arguments)
 
+[JVM Options Cheat Sheet (2021)](https://www.jrebel.com/blog/jvm-options-cheat-sheet)
 
-## Flags
+## `-D` (standard)
 
 ### javax.net.ssl.trustStore
 
@@ -25,7 +26,57 @@ javax.net.ssl.trustStoreType=Windows-ROOT
 https://stackoverflow.com/questions/76131942/how-to-make-the-java-runtime-use-os-ca-certchain \
 https://stackoverflow.com/questions/46845251/java-trust-unix-certificate-store
 
-## Experimental options
+## `-X` (non standard)
+
+### `-Xlog`
+
+Introduced in Java 9, see [JEP 158: **Unified JVM Logging**](https://openjdk.org/jeps/158) and [JEP 271: **Unified GC Logging**](https://openjdk.org/jeps/271).
+
+Before Java 9, multiple non unified options :
+- Garbage collector (GC) event timestamp: -XX:+PrintGCTimeStamps or -XX:+PrintGCDateStamps
+- GC event details: -XX:+PrintGCDetails
+- GC event cause: -XX:+PrintGCCause
+- GC adaptiveness: -XX:+PrintAdaptiveSizePolicy
+- GC-specific options (e.g., for the Garbage First [G1] GC): -XX:+G1PrintHeapRegions
+- Compilation levels: -XX:+PrintCompilation
+- Inlining information: -XX:+PrintInlining
+- Assembly code: -XX:+PrintAssembly (requires -XX:+UnlockDiagnosticVMOptions)
+- Class histogram: -XX:+PrintClassHistogram
+- Information on java.util.concurrent locks: -XX:+PrintConcurrentLocks
+
+By defauly, errors and warnings are logged to stderr (equivalent to `-Xlog:all=warning:stderr:uptime,level,tags`).
+
+```sh
+
+# available tags, log decorators, levels
+# examples
+java -Xlog:help
+
+# tags
+java -Xlog:gc* ...
+java -Xlog:thread* ...
+
+# levels (off, error, warning, info, debug, trace)
+java -Xlog:monitorinflation*=trace ...
+
+# decorators
+java -Xlog:gc*::uptimemillis,pid,tid ...
+
+# file output
+java -Xlog:gc*=info:file=gclog.txt ...
+java -Xlog:monitorinflation*=trace:file=lockinflation.txt -Xlog:gc*=info:file=gclog.txt ...
+
+# dynamic logging (since Java 11)
+jcmd <pid> VM.log what=gc*=trace decorators=uptimemillis,tid,hostname
+# current config and available options 
+jcmd <pid> help VM.log 
+
+# native async support (since Java 17)
+java -Xlog:async ...
+
+```
+
+## `-XX:` (experimental)
 
 ### –XX:+PrintFlagsFinal
 To check which options are enabled by default.
